ThePodcastReview.Web/Content/Site.css
body {
    padding-top: 50px;
    padding-bottom: 20px;    
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 500px;
}

.navbar-fixed-bottom {
    background-color: white;
}

.panel-heading {
    padding-top: 1px;
    padding-bottom: 1px;
}

.panel-body {
    white-space: pre-line;
    box-shadow: 3px 3px 1px 1px rgba(159, 159, 160, .2);
}

.panel-heading {
    box-shadow: 3px 0px 1px 1px rgba(159, 159, 160, .2);
}

